--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en"  data-theme="light">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://i.ibb.co.com/rKcKWyzv/a-logo-with-a-creative-design-of-a-light-Jt-AKAfi8-Sw6d8ckpc-D9-G6-Q-2-St2-E8-Fe-Rrm-Qq-Ahzge21h-A.jpg" />
+    <link rel="icon" type="image/svg+xml" href="https://i.ibb.co.com/ymr1VTV2/a-logo-of-a-job-application-website-with-n-C7-Ter-W9-TCmng1kfe-M6m0-A-2w-P2bzll-St6wl-Kej-Eg-Bdlw-re.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Job Nest</title>
   </head>
